--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "scripts/preinstall.js",
+    "postinstall": "scripts/postinstall.js",
     "prepublishOnly": "scripts/prepublishOnly.js"
   },
   "repository": {
