--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "scripts/postinstall.js",
-    "prepublishOnly": "scripts/prepublishOnly.js"
+    "postinstall": "scripts/postinstall.js"
   },
   "repository": {
     "type": "git",
