--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
   "dependencies": {
     "autows": "0.0.7",
     "chrome-remote-interface": "^0.24.3",
-    "getport": "^0.1.0"
-  },
-  "devDependencies": {
+    "getport": "^0.1.0",
     "ghd": "0.0.5",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.6.1",
