--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "scripts/postinstall.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -21,12 +20,8 @@
   },
   "homepage": "https://github.com/modulesio/rasterize#readme",
   "dependencies": {
-    "autows": "0.0.7",
+    "autows": "0.0.8",
     "chrome-remote-interface": "^0.24.3",
-    "getport": "^0.1.0",
-    "ghd": "0.0.5",
-    "mkdirp": "^0.5.1",
-    "rimraf": "^2.6.1",
-    "tar": "^3.1.7"
+    "getport": "^0.1.0"
   }
 }
